// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/Card CardWithInput smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="bg-white p-4 shadow-[4px_6px_10px_-3px_#bfc9d4] dark:bg-[#191e3a] dark:shadow-none rounded border border-[#e0e6ed] dark:border-[#1b2e4b] opacity-50 cursor-not-allowed">
    <div class="p-4 space-y-4">
      <h3 class="text-lg font-bold mb-2">
        Card with Input
      </h3>
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700"
        >
          Email Input
        </label>
        <div class="relative">
          <input class="form-input bg-gray-100 cursor-not-allowed border-gray-300"
                 id
                 type="text"
                 placeholder="Enter your email"
                 disabled
                 value
          >
        </div>
      </div>
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700"
        >
          Number Input
        </label>
        <div class="relative">
          <input class="form-input bg-gray-100 cursor-not-allowed border-gray-300"
                 id
                 type="number"
                 placeholder="Enter a number"
                 disabled
                 value
          >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/Card CustomClassCard smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex items-center justify-start w-[600px] h-[200px] bg-white p-4 shadow-[4px_6px_10px_-3px_#bfc9d4] dark:bg-[#191e3a] dark:shadow-none rounded border border-[#e0e6ed] dark:border-[#1b2e4b]">
    <div class="px-4">
      <h3 class="text-lg font-bold mb-2">
        Card with Custom Classes
      </h3>
      <p class="text-gray-600 dark:text-gray-300">
        This card uses additional flex classes for layout.
      </p>
    </div>
  </div>
</div>
`;

exports[`Elements/Card Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="bg-white p-4 shadow-[4px_6px_10px_-3px_#bfc9d4] dark:bg-[#191e3a] dark:shadow-none rounded border border-[#e0e6ed] dark:border-[#1b2e4b]">
    <div class="p-4">
      <h3 class="text-lg font-bold mb-2">
        Default Card
      </h3>
      <p class="text-gray-600 dark:text-gray-300">
        This is a default card with some example content.
      </p>
    </div>
  </div>
</div>
`;

exports[`Elements/Card DisabledCard smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="bg-white p-4 shadow-[4px_6px_10px_-3px_#bfc9d4] dark:bg-[#191e3a] dark:shadow-none rounded border border-[#e0e6ed] dark:border-[#1b2e4b]">
    <div class="p-4 space-y-4">
      <h3 class="text-lg font-bold mb-2">
        Disabled Card
      </h3>
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700"
        >
          Disabled Input
        </label>
        <div class="relative">
          <input class="form-input bg-white border-gray-300"
                 id
                 type="text"
                 placeholder="This input is disabled"
                 value
          >
        </div>
      </div>
      <button class="w-full p-2 bg-blue-500 text-white rounded disabled:opacity-50 disabled:cursor-not-allowed">
        Disabled Button
      </button>
    </div>
  </div>
</div>
`;

exports[`Elements/Card MultipleInteractiveElements smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="bg-white p-4 shadow-[4px_6px_10px_-3px_#bfc9d4] dark:bg-[#191e3a] dark:shadow-none rounded border border-[#e0e6ed] dark:border-[#1b2e4b]">
    <div class="p-4 space-y-4">
      <h3 class="text-lg font-bold">
        Interactive Elements
      </h3>
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700"
        >
          Text Input
        </label>
        <div class="relative">
          <input class="form-input bg-white border-gray-300"
                 id
                 type="text"
                 placeholder="Enter text"
                 value
          >
        </div>
      </div>
      <select class="w-full p-2 border rounded dark:bg-[#191e3a] dark:border-[#1b2e4b]">
        <option>
          Option 1
        </option>
        <option>
          Option 2
        </option>
      </select>
      <button class="w-full p-2 bg-blue-500 text-white rounded hover:bg-blue-600 disabled:opacity-50 disabled:cursor-not-allowed">
        Perform Action
      </button>
    </div>
  </div>
</div>
`;
